added a system that allows modpack makers to make guards spawn with modded items

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -5,3 +5,4 @@ public net.minecraft.entity.ai.goal.GoalSelector field_220892_d #goals
 public net.minecraft.entity.ai.goal.PrioritizedGoal field_220774_a #inner
 public net.minecraft.entity.Entity func_213301_b(Lnet/minecraft/entity/Pose;)V # setPose
 public net.minecraft.entity.ai.goal.MeleeAttackGoal field_234037_i_ # nah
+public net.minecraft.loot.LootParameterSets func_216253_a(Ljava/lang/String;Ljava/util/function/Consumer;)Lnet/minecraft/loot/LootParameterSet; # register
