--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -6,3 +6,4 @@ public net.minecraft.entity.ai.goal.PrioritizedGoal field_220774_a #inner
 public net.minecraft.entity.Entity func_213301_b(Lnet/minecraft/entity/Pose;)V # setPose
 public net.minecraft.entity.ai.goal.MeleeAttackGoal field_234037_i_ # nah
 public net.minecraft.loot.LootParameterSets func_216253_a(Ljava/lang/String;Ljava/util/function/Consumer;)Lnet/minecraft/loot/LootParameterSet; # register
+public net.minecraft.entity.ai.goal.MeleeAttackGoal field_75438_g # path
