--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,3 +7,8 @@ public net.minecraft.entity.Entity func_213301_b(Lnet/minecraft/entity/Pose;)V #
 public net.minecraft.entity.ai.goal.MeleeAttackGoal field_234037_i_ # nah
 public net.minecraft.loot.LootParameterSets func_216253_a(Ljava/lang/String;Ljava/util/function/Consumer;)Lnet/minecraft/loot/LootParameterSet; # register
 public net.minecraft.entity.ai.goal.MeleeAttackGoal field_75438_g # path
+protected net.minecraft.client.gui.widget.button.ImageButton field_191747_p # xTexStart
+protected net.minecraft.client.gui.widget.button.ImageButton field_212935_e # textureWidth
+protected net.minecraft.client.gui.widget.button.ImageButton field_212936_f # textureHeight
+protected net.minecraft.client.gui.widget.button.ImageButton field_191748_q # yTexStart
+protected net.minecraft.client.gui.widget.button.ImageButton field_191749_r # yDiffText
